--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+<div class="wrapper">
+  <div class="content">
+    <app-root></app-root>
+  </div>
+  <app-footer></app-footer>
+</div>
 </body>
 </html>
